less/app.less
/* ... */
.header-logo {
    display: block;
    height: 75px;
}

.controls {
    .count {
        float: right;

        &.negative {
            color: red;
        }
    }

    @media screen and (max-width: @screen-xs-max){
        .form-group {
            clear: both;
        }

        .form-control, .help-block {
            width: @small-control-width;
        }

        .count {
            float: left;
            text-align: right;
            width: @small-control-width;
        }

        .bootstrap-touchspin .input-group-btn {
            width: auto;
        }

        textarea {
            max-width: 100%;
        }

        #fontsize {
            width: 220px;
        }
    }
}

#display-wrapper {
    width: 640px;
    margin-bottom: @line-height-computed;
    float: right;

    label {
        color: #888;
    }
    
    @media screen and (max-width: @screen-md-max) {
        float: left;
        width: @small-control-width;
    }
}

.poster-wrapper {
    @media screen and (max-width: @screen-md-max) {
        margin-top: 30px;
    }
}

.poster {
	height: 320px;
	width: 640px;
    &.square {
        height: 640px;
        width: 640px;
    }
	background: #fff;
	position: relative;
	font-size: 32px;
	line-height: 1 !important;
	overflow: hidden;
    padding-left: @grid-gutter-width;
    padding-top: @grid-gutter-width;
    margin-bottom: @grid-gutter-width;
    float: right;
    clear: both;

    .left-quote {
        content:"\201C";
        display: block;
        position: absolute;
        top: @grid-gutter-width;
        left: @grid-gutter-width;
        font-weight: 700;
    }

    &.quotes-off {
        .left-quote,
        p:last-child:after {
            display: none;
        }
    }

	blockquote {
		padding: 0;
		margin: 0 @grid-gutter-width @grid-gutter-width 0.25em;
		border-left: none;
		font-size: inherit;
		line-height: 100%;
		font-weight: bold;
		display: block;

		p {
			font-size: inherit;
			font-weight: inherit;
			margin: 0;
			line-height: 110%;

			span {
				line-height: inherit !important;
			}
		}

        p:last-child:after {
            content:"\2019\2019";
            font-weight: 700;
        }
	}

	p.attribution {
		font-size: @font-size-base * 1.3;
		font-weight: normal;
		line-height: 1.3;
		display: block;
		margin-top: 0;
        text-align: right;
        margin-right: @grid-gutter-width * 2;
	}

	.logo-wrapper {
        position: absolute;
        width: 100%;
        z-index: 100;
        bottom: 0;
        left: 0;
        padding: @grid-gutter-width/4 @grid-gutter-width/2;
        // padding: 0 0 @grid-gutter-width @grid-gutter-width;
        margin: 0;
        font-size: 46px;
        background-color: white;

        .logo {
            .hide;
        }

        img {
            height: 40px;
        }
	}

    @media screen and (max-width: @screen-md-max){
        float: left;
    }

    &.poster-tt {
        font-family: 'Whitney SSm A','Whitney SSm B',sans-serif;
        background: @tribYellow;

        &.quotes-on blockquote {
            margin-left: 0.6em;
        }

        .left-quote,
        p:last-child:after {
            color: @white;
            font-family: "Knockout 49 A", "Knockout 49 B", helvetica;
            font-weight: 700;
            font-size: 1.5em;
        }
        .left-quote {
            margin-top: -0.05em;
        }
        p:last-child:after {
            top: 0.2em;
            position: relative;
            margin-left: 0.05em;
        }

        .logo-wrapper {

            .text-talk { display: none; }

            .logo.logo-tt {
                display: inline-block !important;
                border: none;
                position: relative;
                top: -1px;

                .sixteen-by-nine& {
                    height: 30px !important;
                    width: auto;
                }
            }
        }
    }

    &.poster-talk {
        font-family: 'freight-sans-pro', helvetica;
        background: @black;
        color: @white;
        
        &.quotes-on blockquote {
            margin-left: 0.95em;
        }

        .logo {
            border: 1px solid @white;
        }

        .left-quote,
        p:last-child:after {
            color: @talkBrightGreen;
            font-family: 'freight-sans-pro', helvetica;
            font-weight: 700;
            font-size: 1.5em;
        }
        
        .left-quote {

        }
        p:last-child:after {
            top: 0.2em;
            position: relative;
            margin-left: 0.05em;
        }

        .logo-wrapper {
            background: @talkBrightGreen;
            .text-talk {
                display: block !important;
                border: none;
                top: 50%;
                margin-top: -0.5em;
                position: absolute;
                right: 0;
                padding-right: 1em;
                text-transform: uppercase;
                font-size: 0.35em;
                color: #000;
                font-weight: 500;
            }

            .logo.logo-talk {
                display: inline-block !important;
                border: none;
                position: relative;
                top: -5px;

                .sixteen-by-nine& {
                    height: 30px !important;
                    width: auto;
                }
            }
        }
    }

}

.buttons {
    clear: both;
    float: right;

    @media screen and (max-width: @screen-md-max){
        float: left;
    }
    
    @media screen and (max-width: @screen-xs-max){
        #save {
            display: none;
        }
    }

}

.logo-wrapper {
}

